# tui-rs-file-dialog

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: demo.rs
src/: lib.rs  main.rs
